--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.14"
 dependencies = [
     "datasets>=3.2.0",
     "einops>=0.8.2",
-    "pydantic>=2.12.5",
+    "matplotlib>=3.9.0",
     "torch>=2.10.0",
+    "tqdm>=4.67.0",
     "transformers>=4.48.3",
 ]
